# tictactoe

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.h.in  install.sh
TGUI-examples/: CMakeLists.txt
driver/: main.cpp  screens.cpp
lib/inc/: Board.hpp  BoardCell.hpp  Cell.hpp  Game.hpp  MenuScreen.hpp  TwoPlayerScreen.hpp  VsAiScreen.hpp  cScreen.hpp  screen_0.hpp  screen_1.hpp  screens.hpp
lib/src/: Board.cpp  BoardCell.cpp  Cell.cpp  Game.cpp  MenuScreen.cpp  TwoPlayerScreen.cpp  VsAiScreen.cpp  cScreen.cpp  screen_1.cpp
utilities/: CMakeLists.txt
utilities/logging/inc/: LogConfiguration.hpp
utilities/logging/src/: LogConfiguration.cpp
